--- a/JinHuiJXC/Goods/Add.html
+++ b/JinHuiJXC/Goods/Add.html
@@ -93,7 +93,7 @@
             <tr class="tr60">
                 <td class="td80">最小包装：</td>
                 <td class="td20">
-                    <select id="MinPack" name="MinPack" class="easyui-combobox in80">
+                    <select id="PackMin" name="PackMin" class="easyui-combobox in80">
                         <option value="1" selected>个</option>
                         <option value="2">箱</option>
                         <option value="3">瓶</option>
