--- a/JinHuiJXC/Goods/Edit.html
+++ b/JinHuiJXC/Goods/Edit.html
@@ -93,7 +93,7 @@
             <tr class="tr60">
                 <td class="td80">最小包装：</td>
                 <td class="td20">
-                    <select id="MinPack" name="MinPack" class="easyui-combobox in80">
+                    <select id="PackMin" name="PackMin" class="easyui-combobox in80">
                         <option value="1" selected>个</option>
                         <option value="2">箱</option>
                         <option value="3">瓶</option>
@@ -206,7 +206,7 @@
                     $('#Barcode').textbox('setValue', da[0].Barcode);
                     $('#MinInv').textbox('setValue', da[0].InvMin);
                     $('#MaxInv').textbox('setValue', da[0].InvMax);
-                    $('#MinPack').textbox('setValue', da[0].PackMin);
+                    $('#PackMin').textbox('setValue', da[0].PackMin);
                     $('#MaxPack').textbox('setValue', da[0].PackMax);
                     $('#Ratio').textbox('setValue', da[0].PackRatio);
                     $('#Spec').textbox('setValue', da[0].PackSpec);
