--- a/JinHuiJXC/Main.html
+++ b/JinHuiJXC/Main.html
@@ -75,7 +75,7 @@
         <div title="采  购" iconCls="icon-appup3" style="overflow:auto;">
             <ul>
                 <li>
-                    <a href="#" onclick="addTab('采购意向', '/Supplier/Index.html')"
+                    <a href="#" onclick="addTab('采购意向', '/PurRec/Index.html')"
                        class="easyui-linkbutton"
                        data-options="iconCls:'icon-huoche2',size:'large',iconAlign:'top'">采购意向</a>
                 </li>
@@ -155,9 +155,9 @@
                        data-options="iconCls:'icon-user2',size:'large',iconAlign:'top'">用户管理</a>
                 </li>
                 <li>
-                    <a href="#" onclick="addTab('销售记录', '/SaleRec/Index.html')"
+                    <a href="#" onclick="addTab('系统设置', '/SaleRec/Index.html')"
                        class="easyui-linkbutton"
-                       data-options="iconCls:'icon-leibie',size:'large',iconAlign:'top'">操作日志</a>
+                       data-options="iconCls:'icon-leibie',size:'large',iconAlign:'top'">系统设置</a>
                 </li>
             </ul>
         </div>
