--- a/JinHuiJXC/SaleRec/Show.html
+++ b/JinHuiJXC/SaleRec/Show.html
@@ -80,7 +80,7 @@
                         <th width="10%" data-options="field:'NowInv'">当前库存</th>
                         <th width="5%" data-options="field:'UnitPrice'">单价</th>
                         <th width="10%" data-options="field:'Num'">数量</th>
-                        <th width="5%" data-options="field:'MinPack'">单位</th>
+                        <th width="5%" data-options="field:'PackMin'">单位</th>
                         <th width="5%" data-options="field:'DisRate'">折扣(%)</th>
                         <th width="10%" data-options="field:'TotalPrice'">总价</th>
                     </tr>
