--- a/JinHuiJXC/Main.html
+++ b/JinHuiJXC/Main.html
@@ -80,7 +80,7 @@
                        data-options="iconCls:'icon-huoche2',size:'large',iconAlign:'top'">采购意向</a>
                 </li>
                 <li>
-                    <a href="#" onclick="addTab('采购记录', '/PurRec/Add.html')"
+                    <a href="#" onclick="addTab('采购记录', '/PurRec/Index.html')"
                        class="easyui-linkbutton"
                        data-options="iconCls:'icon-huoche1',size:'large',iconAlign:'top'">采购记录</a>
                 </li>
