--- a/JinHuiJXC/Goods/Index.html
+++ b/JinHuiJXC/Goods/Index.html
@@ -21,11 +21,11 @@
                 <th width="5%" data-options="field:'ID',hidden:'true'">ID</th>
                 <th width="30%" data-options="field:'Name'">商品名称</th>
                 <th width="10%" data-options="field:'Barcode'">条码</th>
-                <th width="8%" data-options="field:'Brand'">品牌</th>
+                <th width="8%" data-options="field:'BrandName'">品牌</th>
                 <th width="8%" data-options="field:'PriceCost'">成本价</th>
                 <th width="8%" data-options="field:'PriceRetail'">零售价</th>
                 <th width="8%" data-options="field:'InvNow'">当前库存</th>
-                <th width="8%" data-options="field:'PackMin'">最小包装</th>
+                <th width="8%" data-options="field:'PackName'">最小包装</th>
                 <th width="15%" data-options="field:'AddTime',sortable:true">添加时间</th>
             </tr>
         </thead>
