--- a/JinHuiJXC/SaleRec/Index.html
+++ b/JinHuiJXC/SaleRec/Index.html
@@ -43,7 +43,7 @@
                     </td>
                     <td>
                         <a href="javascript:void(0);" class="easyui-linkbutton" data-options="iconCls:'icon-show',plain:true"
-                           onclick="Edit()">查看</a>
+                           onclick="Show()">查看</a>
                     </td>
                     <td>
                         <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-del-1',plain:true"
@@ -120,7 +120,7 @@
             });
         });
 
-        function Edit() {
+        function Show() {
             var row = $('#dgList').datagrid('getSelected');
             var sTitle = ('查看' + row.SalesNo).substring(0, 10);
             var sUrl = "/SaleRec/Show.html?ID=" + row.ID;
