--- a/JinHuiJXC/SaleRec/Show.html
+++ b/JinHuiJXC/SaleRec/Show.html
@@ -32,10 +32,11 @@
                     <input id="MemberScore" name="MemberScore" type="text" class="easyui-textbox" />
                 </td>
                 <td style="width:100px;text-align:right;">
-                    <label for="DiscountAmount10" class="control-label">折扣(%)：</label>
+                    <label for="State" class="control-label">状态：</label>
                 </td>
                 <td style="width:180px;">
-                    <input id="DiscountAmount10" name="DiscountAmount10" type="text" class="easyui-textbox" />
+                    <input id="State" name="State" type="text" class="easyui-textbox"
+                           value='100'>
                 </td>
             </tr>
             <tr style="height:10px;">
@@ -77,12 +78,11 @@
                         <th width="5%" data-options="field:'ID',hidden:'true'">ID</th>
                         <th width="25%" data-options="field:'GoodsName'">商品名称</th>
                         <th width="10%" data-options="field:'Barcode'">条码</th>
-                        <th width="10%" data-options="field:'NowInv'">当前库存</th>
                         <th width="5%" data-options="field:'UnitPrice'">单价</th>
-                        <th width="10%" data-options="field:'Num'">数量</th>
+                        <th width="10%" data-options="field:'Sum'">数量</th>
                         <th width="5%" data-options="field:'PackMin'">单位</th>
-                        <th width="5%" data-options="field:'DisRate'">折扣(%)</th>
-                        <th width="10%" data-options="field:'TotalPrice'">总价</th>
+                        <th width="5%" data-options="field:'RateDis'">折扣(%)</th>
+                        <th width="10%" data-options="field:'PriceTotal'">总价</th>
                     </tr>
                 </thead>
             </table>
@@ -91,10 +91,6 @@
             <table style="background-color:#f5f5f5;width:100%;font-size:16px;font-weight:bold;">
                 <tr>
                     <td width="50%"></td>
-                    <td width="5%">合计：</td>
-                    <td width="5%">&nbsp;<label id="lbNum">0</label></td>
-                    <td width="5%">&nbsp;<label id="lbTotal">0</label>&nbsp;&nbsp;元</td>
-                    <td width="35%"></td>
                 </tr>
             </table>
             <br />
@@ -240,16 +236,16 @@
                     $('#MemberName').textbox('setValue', da[0].MemberName);
                     $('#MemberNo').textbox('setValue', da[0].MemberNo);
                     $('#MemberScore').textbox('setValue', da[0].MemberScore);
-                    $('#DiscountAmount').textbox('setValue', da[0].DiscountAmount);
-                    $('#ChargeAmount').textbox('setValue', da[0].ChargeAmount);
-                    $('#ReceiveAmount').textbox('setValue', da[0].ReceiveAmount);
+                    $('#State').textbox('setValue', da[0].State);
+                    $('#ChargeAmount').textbox('setValue', da[0].AmountCharge);
+                    $('#ReceiveAmount').textbox('setValue', da[0].AmountReceive);
                     $('#SalesNo').textbox('setValue', da[0].SalesNo);
                     $('#SalesDate').textbox('setValue', da[0].SalesDate);
                     $('#SalesType').textbox('setValue', da[0].SalesType);
                     $('#AddPerson').textbox('setValue', da[0].AddUser);
                     $('#SalerName').textbox('setValue', da[0].SalerName);
-                    $('#PaymentMethod').textbox('setValue', da[0].PaymentMethod);
-                    $('#DeliveryMethod').textbox('setValue', da[0].DeliveryMethod);
+                    $('#PaymentMethod').textbox('setValue', da[0].PaymentType);
+                    $('#DeliveryMethod').textbox('setValue', da[0].DeliveryType);
                     $('#SalesDesc').textbox('setValue', da[0].SalesDesc);
                 },
                 error: function (msg) {
